--- a/views/calendariodevigencias.ejs
+++ b/views/calendariodevigencias.ejs
@@ -117,10 +117,9 @@
         <table class="table">
           <thead id="custom-thead" class="sticky-top">
             <tr>
-              <th scope="col" class="col-md-1 h4"><strong>Operadora</strong></th>
-              <th scope="col" class="col-md-4 h4"><strong>Região</strong></th>
-              <th scope="col" class="col-md-3 h4"><strong>Vigência/Fechamento</strong></th>
-              <th scope="col" class="col-md-4 h4"><strong>Manual</strong></th> 
+              <th class="col-3 h4"><strong>Operadora</strong></th>
+              <th class="col-3 h4"><strong>Região</strong></th>
+              <th class="col-6 h4"><strong>Vigência - Movimentação - Fechamento</strong></th> 
             </tr>
           </thead>
           <tbody>
@@ -128,15 +127,18 @@
               <% if (operadoras[i].vigencias.length > 0 && operadoras[i].fechamentos.length > 0) { %>
               <tr scope="row" class="operadora-table table" data-operadora="<%= operadoras[i].nome %>"
                 data-administradora="<%= operadoras[i].administradora %>" data-id="<%= operadoras[i].id %>">
-                <td scope="col" class="col-1">
+                <td scope="col" class="col-3">
                   <div class="img-container">
                     <img class="img-fluid" src="<%= operadoras[i].logo %>">
+                    <% if (operadoras[i].areaAtuacao) { %>
+                      <a href="<%= operadoras[i].areaAtuacao %>" target="_blank"><button class="btn btn-info btn-abrir"><i class="bi bi-download"></i> Manual</button></a>
+                    <% } %>
                   </div>
                 </td>
-                <td class="col-4">
+                <td class="col-3">
                   <%= operadoras[i].abrangencia %>
                 </td>
-                <td class="col-3">
+                <td class="col-6">
                   <% for (let j = 0; j < operadoras[i].vigencias.length; j++) { %>
                     <table class="table table-bordered">
                       <tr class="my-2">
@@ -154,6 +156,16 @@
                           <% } %>
                         </td>
                         <td class="px-2">
+                          <% if (operadoras[i].movimentacoes[j]) { %>
+                            <% const movimentacaoDate = new Date(operadoras[i].movimentacoes[j]); %>
+                            <% const movimentacaoDay = String(movimentacaoDate.getDate()).padStart(2, '0'); %>
+                            <% const movimentacaoMonth = String(movimentacaoDate.getMonth() + 1).padStart(2, '0'); %>
+                            <% const movimentacaoYear = String(movimentacaoDate.getFullYear()).slice(-2); %>
+                            <% const movimentacaoTime = movimentacaoDate.toLocaleTimeString([], { hour: '2-digit', minute: '2-digit', hour12: false }); %>
+                            <%= `${movimentacaoDay}-${movimentacaoMonth}-${movimentacaoYear} até às ${movimentacaoTime}` %>
+                        <% } %>
+                        </td>
+                        <td class="px-2">
                           <% if (operadoras[i].fechamentos[j]) { %>
                             <% const fechamentoDate = new Date(operadoras[i].fechamentos[j]); %>
                             <% const fechamentoDay = String(fechamentoDate.getDate()).padStart(2, '0'); %>
@@ -165,11 +177,6 @@
                         </td>
                       </tr>
                     </table>
-                  <% } %>
-                </td>
-                <td class="col-4">
-                  <% if (operadoras[i].areaAtuacao) { %>
-                    <a href="<%= operadoras[i].areaAtuacao %>" target="_blank"><button class="btn btn-info btn-abrir"><i class="bi bi-download"></i> Abrir</button></a>
                   <% } %>
                 </td>
               </tr>
