--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -6,10 +6,57 @@ body {
     font-family: 'Montserrat', sans-serif;
     display: flex;
     flex-direction: row;
-    gap:0;
+    gap: 0;
     width: 100vw;
     box-sizing: border-box;
     overflow-x: hidden;
+}
+
+/* Estilize a barra de rolagem */
+/* Google Chrome */
+::-webkit-scrollbar {
+    width: 12px;
+    /* Largura da barra de rolagem */
+}
+
+/* Polegar da barra de rolagem */
+::-webkit-scrollbar-thumb {
+    background-color: #ED7923;
+    /* Cor do polegar da barra de rolagem */
+    border-radius: 6px;
+    /* Raio das bordas do polegar */
+}
+
+/* Quando o mouse passar sobre o polegar da barra de rolagem */
+::-webkit-scrollbar-thumb:hover {
+    background-color: #2BB3B1;
+    /* Cor do polegar da barra de rolagem ao passar o mouse */
+}
+
+/* Estilize a barra de rolagem de rolagem horizontal */
+/* Google Chrome */
+::-webkit-scrollbar-track-x {
+    background-color: #f1f1f1;
+    /* Cor da faixa de rolagem horizontal */
+}
+
+/* Estilize a barra de rolagem de rolagem vertical */
+/* Google Chrome */
+::-webkit-scrollbar-track-y {
+    background-color: #f1f1f1;
+    /* Cor da faixa de rolagem vertical */
+}
+
+/* Estilize os botões de seta da barra de rolagem (geralmente ocultos) */
+/* Google Chrome */
+::-webkit-scrollbar-button {
+    display: none;
+    /* Oculta os botões de seta da barra de rolagem */
+}
+
+
+.operadorasBody {
+    overflow-x: auto;
 }
 
 h1 {
@@ -29,6 +76,7 @@ h1 {
     justify-content: center;
     text-align: center;
     box-shadow: 2px 0 4px rgba(0, 0, 0, 0.2);
+    z-index: 999;
 }
 
 .navbar h1 {
@@ -39,10 +87,11 @@ h1 {
     font-size: 22px;
 }
 
-.navbar i{
-    color:#ED7923;
+.navbar i {
+    color: #ED7923;
     font-size: 20px;
 }
+
 .navbar::after {
     content: '';
     position: absolute;
@@ -61,7 +110,7 @@ h1 {
 
 .navbar li {
     padding: 10px;
-    
+
 }
 
 .navbar li a {
@@ -83,6 +132,14 @@ a {
     text-decoration: none;
 }
 
+.custom-thead {
+    position: sticky;
+    top: 0;
+    z-index: 1;
+    background-color: #fff;
+    /* Defina a cor de fundo desejada */
+}
+
 .data-atualizacao-input,
 .data-proxima-atualizacao-input {
     margin-bottom: 10px;
@@ -92,18 +149,13 @@ a {
     width: 200px;
 }
 
-.custom-thead {
-    background-color: #ED7923;
-    color:#20325d;
-}
-
 .btn-primary {
-    background-color: #ED7923!important ;
+    background-color: #ED7923 !important;
 }
 
 .content {
     width: 80vw;
-    margin-left: 18vw; 
+    margin-left: 18vw;
 }
 
 .inactive {
@@ -111,7 +163,8 @@ a {
 }
 
 .modal-dialog {
-    max-height: 80vh; /* Defina a altura máxima desejada, por exemplo, 80% da altura da viewport */
+    max-height: 80vh;
+    /* Defina a altura máxima desejada, por exemplo, 80% da altura da viewport */
     width: 80%;
 }
 
@@ -151,8 +204,8 @@ a {
     border-radius: 5px;
 }
 
-.img img{
-    max-width: 100%; 
+.img img {
+    max-width: 100%;
     height: auto;
 }
 
@@ -165,7 +218,7 @@ a {
     padding: 10%;
 }
 
-.vigencias{
+.vigencias {
     gap: 10px;
 }
 
@@ -179,11 +232,13 @@ a {
 }
 
 .operadora:nth-child(even) {
-    background-color: #fff; /* Fundo branco para divs pares */
+    background-color: #fff;
+    /* Fundo branco para divs pares */
 }
-  
+
 .operadora:nth-child(odd) {
-    background-color: #f2f2f2; /* Fundo cinza claro para divs ímpares */
+    background-color: #f2f2f2;
+    /* Fundo cinza claro para divs ímpares */
 }
 
 .cabecalho {
@@ -195,9 +250,9 @@ a {
     height: auto;
 }
 
-.footer{
+.footer {
     background: #20325d;
-    color:#fff;
+    color: #fff;
     display: flex;
     flex-direction: column;
     gap: 2rem;
@@ -207,7 +262,7 @@ a {
     border: none;
 }
 
-.salvar-btn, .update-btn{
+.salvar-btn, .update-btn {
     min-width: -webkit-fill-available;
 }
 
@@ -215,11 +270,13 @@ a {
     width: auto;
     margin: auto;
 }
-  
+
 .vigenciasLinha:nth-child(even) {
-    background-color: #6deeff; /* Fundo branco para divs pares */
+    background-color: #6deeff;
+    /* Fundo branco para divs pares */
 }
-  
+
 .vigenciasLinha:nth-child(odd) {
-    background-color: #c7f8ff; /* Fundo cinza claro para divs ímpares */
+    background-color: #c7f8ff;
+    /* Fundo cinza claro para divs ímpares */
 }
