--- a/views/calendariodevigencias.ejs
+++ b/views/calendariodevigencias.ejs
@@ -4,7 +4,7 @@
 <head>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-
+  <link rel="icon" type="image/png" href="/img-privadas/faviconlinhamasterv2.png">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="./img/faviconV2_mounthermon.png" type="image/png">
