Alterações Banco de Dados

--- a/views/vigencias.ejs
+++ b/views/vigencias.ejs
@@ -140,8 +140,8 @@
                         </p>
                     </div>
                     <div class="col-6"> 
-                        <button type="button" class="salvar-btn btn btn-primary">Salvar informações</button>
-                        <a href="/visualizar" target="_blank"><button type="button" class="btn btn-primary">Visualizar Prévia</button></a>
+                        <button type="button" class="salvar-btn btn btn-primary">Salvar informações e Visualizar Prévias</button>
+                        <!-- <a href="/visualizar" target="_blank"><button type="button" class="btn btn-primary">Visualizar Prévia</button></a> -->
                     </div>
                 </div>
             </div>
