--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -280,3 +280,17 @@ a {
     background-color: #c7f8ff;
     /* Fundo cinza claro para divs ímpares */
 }
+
+/* Estilos para exibir os campos em blocos ao editar */
+.operadora.edit-mode .abrangencia-wrapper,
+.operadora.edit-mode .areadeatuacao-wrapper {
+    width: 100%;
+    display: block;
+}
+
+.operadora.edit-mode .abrangencia,
+.operadora.edit-mode .areadeatuacao {
+    width: 100%;
+    display: block;
+    margin-bottom: 10px;
+}
