--- a/views/operadoras.ejs
+++ b/views/operadoras.ejs
@@ -28,48 +28,71 @@
         Erro!
       </div>
         <div class="content">
-            <h1>Operadoras</h1>
-            <table class="table">
-                <thead class="custom-thead">
-                    <tr>
-                        <th scope="col">ID</th>
-                        <th scope="col">Logo</th>
-                        <th scope="col">Nome</th>
-                        <th scope="col">Administradora</th>
-                        <th scope="col">Região</th> <!-- Antiga Abrangência -->
-                        <th scope="col">Link</th> <!-- Antiga Area de atuação -->
-                        <th scope="col">Ações</th>
-                    </tr>
-                </thead>
-                <tbody class="tbody-operadoras">
-                    <% for (let i=0; i < operadoras.length; i++) { %>
-                        <tr data-id="<%= operadoras[i].id %>" id="operadora-<%= operadoras[i].id %>">
-                            <th scope="row"><%= i+1 %></th>
-                            <td class="td-1"><img src="<%= operadoras[i].logo %>" class="editable-image"><button class="edit-image-btn btn btn-info" style="display: none;" title="Editar logo da Operadora"><i class="bi bi-images"></i></button>
-                            </td>
-                            <td class="td-2"><span class="nome-operadora input" data-field="nome">
-                                    <%= operadoras[i].nome %>
-                                </span></td>
-                            <td class="td-3"><span class="nome-adm select" data-field="administradora">
-                                    <%= operadoras[i].administradora %>
-                                </span></td>
-                            <td class="td-4"><span class="abrangencia textarea" data-field="abrangencia">
-                                    <%= operadoras[i].abrangencia %>
-                                </span></td>
-                            <td class="td-5"><span class="areadeatuacao textarea" data-field="areaAtuacao">
-                                    <%= operadoras[i].areadeatuacao %>
-                                </span></td>
-                            <td>
-                                <button class="edit-btn btn btn-primary"><i class="bi bi-pencil-square" title="Editar informações da operadora"></i></button>
+            <div class="row cabecalho">
+                <h1>Operadoras</h1>
+                <div class="col-1">
+                    Logo
+                </div>
+                <div class="col-2">
+                    Nome
+                </div>
+                <div class="col-2">
+                    Administradora
+                </div>
+                <div class="col-3">
+                    Região
+                </div>
+                <div class="col-1">
+                    Link
+                </div>
+                <div class="col-2">
+                    Ações
+                </div>
+            </div>
+            <div class="tbody-operadoras">
+                <% for (let i=0; i < operadoras.length; i++) { %>
+                    <div class="row operadora" data-id="<%= operadoras[i].id %>" id="operadora-<%= operadoras[i].id %>">
+                        <div class="col-1 td-1 img">
+                            <img src="<%= operadoras[i].logo %>" class="editable-image"><button class="edit-image-btn btn btn-info" style="display: none;" title="Editar logo da Operadora"><i class="bi bi-images"></i></button>
+                        </div>
+                        <div class="col-2 td-2">
+                            <span class="nome-operadora input" data-field="nome">
+                                <%= operadoras[i].nome %>
+                            </span>
+                        </div>
+                        <div class="col-2 td-3">
+                            <span class="nome-adm select" data-field="administradora">
+                                <%= operadoras[i].administradora %>
+                            </span>
+                            <select class="form-select admin-select" style="display: none;">
+                                <% administradoras.forEach(function(adm) { %>
+                                    <option value="<%= adm %>" <%= operadoras[i].administradora === adm ? "selected" : "" %>><%= adm %></option>
+                                <% }); %>
+                            </select>
+                        </div>
+                        <div class="col-3 td-4 abrangencia-wrapper">
+                            <span class="abrangencia textarea" data-field="abrangencia">
+                                <%= operadoras[i].abrangencia %>
+                            </span>
+                        </div>
+                        <div class="col-1 td-5 areadeatuacao-wrapper">
+                            <span class="areadeatuacao">
+                                <a href="<%= operadoras[i].areadeatuacao %>" target="_blank" class="link-text">
+                                    Abrir Link
+                                </a>
+                                <input type="text" class="form-control link-edit" value="<%= operadoras[i].areadeatuacao %>" style="display: none;">
+                            </span>
+                        </div>                      
+                        <div class="col-2">
+                            <button class="edit-btn btn btn-primary"><i class="bi bi-pencil-square" title="Editar informações da operadora"></i></button>
                                 
                                 <button class="cancel-btn btn btn-danger" style="display: none;" title="Voltar sem salvar"><i class="bi bi-arrow-counterclockwise"></i></button>
                                 <!-- Botão para editar a imagem -->
                                 <button class="save-btn btn btn-success" style="display: none;" title="Salvar alterações"><i class="bi bi-sd-card"></i></button>
-                            </td>
-                        </tr>
-                        <% } %>
-                </tbody>
-            </table>
+                        </div>
+                    </div>
+                <% } %>
+            </div>
             <div>
                 <button class="btn btn-primary" id="adicionar-operadora"> <i class="bi bi-plus-circle"></i> Adicionar nova operadora</button>
                 <button class="btn btn-danger" id="excluir-operadora" href="#exclusao"><i class="bi bi-trash2"></i> Excluir operadora</button>
